--- a/example-application/deployment.yaml
+++ b/example-application/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: example-application
-        image: <image-name>:<tag>
+        image: nginx
         ports:
         - containerPort: 8080
 
