--- a/example-application/deployment.yaml
+++ b/example-application/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       - name: example-application
         image: nginx
         ports:
-        - containerPort: 8080
+        - containerPort: 80
+        #- containerPort: 8080
 
