--- a/example-application/flux-demo-release.yaml
+++ b/example-application/flux-demo-release.yaml
@@ -11,4 +11,4 @@ spec:
   chart:
     git: git@github.com:onnorom/fluxcd-repo.git
     path: helm-charts/fluxcd-demo
-    ref: fluxcd-demo
+    ref: 0.1.0 
