--- a/example-application/podinfo.yaml
+++ b/example-application/podinfo.yaml
@@ -9,4 +9,4 @@ spec:
   chart:
     repository: https://stefanprodan.github.io/podinfo
     name: podinfo
-    version: 3.2.0
+    version: 3.2.0 # chart version
